[package]
name = "bevy_2dviewangle"
version = "0.7.0"
authors = ["Trung Do <dothanhtrung@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/kimtinh/bevy-2dviewangle"
keywords = ["bevy"]
description = "Bevy plugin for easier to switch texture base on view angles"
exclude = ["assets", "examples", ".cargo", "bevy-2dviewangle-macro"]
categories = ["game-development"]

[dependencies]
bevy = { version = "0.14", features = ["bevy_asset", "bevy_pbr", "bevy_sprite"], default-features = false }
bevy_2dviewangle_macro = { version = "0.4", path = "./bevy-2dviewangle-macro" }

[features]
default = ["2d", "3d"]
3d = []
2d = []

[dev-dependencies]
bevy = "0.14"
bevy_sprite3d = "3.0"
bevy_asset_loader = { version = "0.21", features = ["2d", "3d", "standard_dynamic_assets"] }