[package]
name = "bevy_2dviewangle"
version = "0.10.0"
authors = ["Trung Do <dothanhtrung@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/kimtinh/bevy-2dviewangle"
keywords = ["bevy"]
description = "Bevy plugin for easier to switch texture base on view angles"
exclude = ["assets", "examples", ".cargo", "tests", "bevy-2dviewangle-macro"]
categories = ["game-development"]

[dependencies]
bevy = { version = "0.16", features = ["bevy_asset", "bevy_sprite", "bevy_state"], default-features = false }
bevy_2dviewangle_macro = { version = "0.5", path = "./bevy-2dviewangle-macro" }

[dev-dependencies]
bevy = { version = "0.16" }
bevy_sprite3d = { version = "5.0.0-rc", git = "https://github.com/dothanhtrung/bevy_sprite3d", branch = "main" }
bevy_asset_loader = { version = "0.23.0-rc", features = ["2d"] }