[package]
name = "bevy_2dviewangle"
version = "0.12.0"
authors = ["Trung Do <dothanhtrung@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/kimtinh/bevy-2dviewangle"
keywords = ["bevy"]
description = "Bevy plugin for easier to switch texture base on view angles"
exclude = ["assets", "examples", ".cargo", "tests", "bevy-2dviewangle-macro"]
categories = ["game-development"]

[dependencies]
bevy = { version = "0.17", features = ["bevy_asset", "bevy_sprite", "bevy_state"], default-features = false }
bevy_2dviewangle_macro = { version = "0.6", path = "./bevy-2dviewangle-macro" }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
bevy = { version = "0.17", features = ["dynamic_linking"] }
bevy_sprite3d = { version = "7.0", path = "../bevy_sprite3d" }
bevy_asset_loader = { version = "0.24.0-rc", features = ["2d"] }