[package]
name = "bevy_2dviewangle_macro"
version = "0.6.0"
authors = ["Trung Do <dothanhtrung@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/kimtinh/bevy-2dviewangle"
keywords = ["bevy"]
description = "Bevy plugin for easier to switch texture base on view angles (derive macro)"
exclude = ["assets", "examples", ".cargo"]
categories = ["game-development"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
xxhash-rust = {version = "0.8", features = ["xxh3"]}