[package]
name = "bevy_2dviewangle"
version = "0.3.0"
authors = ["Trung Do <dothanhtrung@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/kimtinh/bevy-2dviewangle"
keywords = ["bevy"]
description = "Bevy plugin for easier to switch texture base on view angles"
exclude = ["assets", "examples"]

[dependencies]
bevy = { version = "0.13", features = ["bevy_asset", "bevy_pbr", "bevy_sprite"], default-features = false }
bevy_sprite3d = { version = "2.8", optional = true }
bevy_2dviewangle_derive = { path = "../bevy-2dviewangle-derive", optional = true }

[features]
default = ["2d", "3d"]
3d = ["dep:bevy_sprite3d"]
2d = []
asset_loader = ["dep:bevy_2dviewangle_derive"]

[dev-dependencies]
bevy = "0.13"
bevy_sprite3d = "2.8"
bevy_2dviewangle_derive = { path = "../bevy-2dviewangle-derive" }