[package]
name = "bevy_2dviewangle"
version = "0.4.0"
authors = ["Trung Do <dothanhtrung@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/kimtinh/bevy-2dviewangle"
keywords = ["bevy"]
description = "Bevy plugin for easier to switch texture base on view angles"
exclude = ["assets", "examples", ".cargo"]

[dependencies]
bevy = { version = "0.13", features = ["bevy_asset", "bevy_pbr", "bevy_sprite"], default-features = false }
bevy_sprite3d = { version = "2.8", optional = true }
bevy_2dviewangle_macro = "0.2.0"

[features]
default = ["2d", "3d"]
3d = ["dep:bevy_sprite3d"]
2d = []

[dev-dependencies]
bevy = "0.13"
bevy_sprite3d = "2.8"
bevy_asset_loader = { version = "0.20", features = ["2d", "3d", "standard_dynamic_assets"] }